--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <meta charset="utf-8">
     <meta name="baidu-site-verification" content="a7RJoSjycG">
     <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
+    <meta name="viewport"
+        content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
     <link rel="dns-prefetch" href="//axvert.chsi.com.cn">
     <link rel="dns-prefetch" href="//t1.chei.com.cn">
     <link rel="dns-prefetch" href="//t2.chei.com.cn">
@@ -30,7 +31,8 @@
     <script src="https://t1.chei.com.cn/common/jquery/2.1.1/jquery.min.js"></script>
     <script src="https://t1.chei.com.cn/common/wap/photoswipe/js/photoswipe.js"></script>
     <script src="https://t1.chei.com.cn/common/wap/photoswipe/js/photoswipe-ui-default.min.js"></script>
-    <script src="https://t2.chei.com.cn/chsi/js/wap/img_swipe.js"></script><script src="https://t1.chei.com.cn/common/js/vue/2.6.10/vue.min.js"></script>
+    <script src="https://t2.chei.com.cn/chsi/js/wap/img_swipe.js"></script>
+    <script src="https://t1.chei.com.cn/common/js/vue/2.6.10/vue.min.js"></script>
     <script src="https://t1.chei.com.cn/common/wap/vant/2.12.27/vant.min.js"></script>
     <script src="https://t3.chei.com.cn/chsi/assets/gb/wap/js/vendors.js"></script>
     <script src="https://t1.chei.com.cn/chsi/assets/gb/wap/js/app.js"></script>
@@ -277,19 +279,20 @@
         <div class="wap-nav-bar">
             <div class="wap-nav-bar__left"><a href="https://www.chsi.com.cn/"><img
                         src="https://t3.chei.com.cn/chsi/assets/gb/wap/images/logo.png" alt="学信网" class="logo"></a>
-                <span class="logo-dot"></span> <span class="logo-text"><a href="https://www.chsi.com.cn/">学历认证</a></span>
+                <span class="logo-dot"></span> <span class="logo-text"><a
+                        href="https://www.chsi.com.cn/">学历认证</a></span>
             </div>
             <div class="wap-nav-bar__center"></div>
             <div class="wap-nav-bar__right" id="nav_1"><span class="ch-nav">
-                <img class="ch-icon-wap-nav ch-nav-img" alt="" src="./nav.jpg"> </span>
+                    <img class="ch-icon-wap-nav ch-nav-img" alt="" src="./nav.jpg"> </span>
             </div>
         </div>
         <div class="res bg-result-container">
             <div class="bg-white">
                 <div class="top-change clearfix">
                     <div class="fl lang-div change-language-box">
-                        <div class="switch"><span class="cg-bgyz-title">报告语种</span> <a
-                                href="https://www.chsi.com.cn/" class="current">中文</a></div>
+                        <div class="switch"><span class="cg-bgyz-title">报告语种</span> <a href="https://www.chsi.com.cn/"
+                                class="current">中文</a></div>
                     </div>
                     <div class="fr pdf-div down-pdf-box"><a class="down-bg-pdf"></a></div>
                 </div>
@@ -355,14 +358,14 @@
             <div class="collection card zcrz-collection">
                 <div class="collection-item zcrz-box">
                     以上学历情况属实，专此认证
-                    <span class="zcrz-icon"></span></div>
+                    <span class="zcrz-icon"></span>
+                </div>
             </div>
             <div class="collection card zs-list">
                 <div class="row collection-item">
                     <div class="col s4 bolder">毕业证书</div>
-                    <div class="col s8 materialboxed"><img
-                            src="./member.png" data-caption="毕业证书"
-                            width="60" height="40"> <i class="iconfont"></i></div>
+                    <div class="col s8 materialboxed"><img src="./member.png" data-caption="毕业证书" width="60"
+                            height="40"> <i class="iconfont"></i></div>
                 </div>
             </div>
         </div>
@@ -376,8 +379,7 @@
                             <div class="pswp__zoom-wrap" style="transform: translate3d(0px, 209px, 0px) scale(1);">
                                 <div class="pswp__img pswp__img--placeholder pswp__img--placeholder--blank"
                                     style="width: 375px; height: 250px; display: none;"></div><img class="pswp__img"
-                                    src="./member.png"
-                                    style="display: block; width: 375px; height: 250px;">
+                                    src="./member.png" style="display: block; width: 375px; height: 250px;">
                             </div>
                         </div>
                         <div class="pswp__item" style="display: block; transform: translate3d(420px, 0px, 0px);"></div>
@@ -412,14 +414,39 @@
         主办单位：<a href="https://chesicc.chsi.com.cn/">教育部学生服务与素质发展中心</a><br>
         Copyright © 2003-2024 <a href="https://www.chsi.com.cn/" target="_blank">学信网</a> All Rights Reserved
     </div>
-    <div class="ch-common-nav-popup"><div class="ch-van-overlay" style="z-index: 2001;"></div> <div class="van-popup van-popup--center" style="z-index: 2002;"><div class="close-bar"><a href="/wap/"><img src="https://t3.chei.com.cn/chsi/assets/gb/wap/images/logo.png" alt="学信网" class="logo"></a> <i class="ch-icon ch-icon-cross"></i></div> <div class="gk-top-navlist"><div class="van-row"><div class="van-col van-col--8"><a href="/">首页</a></div><div class="van-col van-col--8"><a href="https://my.chsi.com.cn/">学籍查询</a></div><div class="van-col van-col--8"><a href="/xlcx/index.jsp">学历查询</a></div><div class="van-col van-col--8"><a href="/xwcx/index.jsp">学位查询</a></div><div class="van-col van-col--8"><a href="/xlcx/bgcx.jsp">在线验证</a></div><div class="van-col van-col--8"><a href="/xlrz/index2.jsp">出国教育背景服务</a></div><div class="van-col van-col--8"><a href="https://my.chsi.com.cn/archive/index.jsp#txjd">图像校对</a></div><div class="van-col van-col--8"><a href="https://my.chsi.com.cn/">学信档案</a></div><div class="van-col van-col--8"><a href="https://gaokao.chsi.com.cn/">高考</a></div><div class="van-col van-col--8"><a href="https://yz.chsi.com.cn/">研招</a></div><div class="van-col van-col--8"><a href="https://www.gatzs.com.cn/">港澳台招生</a></div><div class="van-col van-col--8"><a href="https://www.gfbzb.gov.cn/">征兵</a></div><div class="van-col van-col--8"><a href="https://www.ncss.cn/">就业</a></div><div class="van-col van-col--8"><a href="https://xz.chsi.com.cn/">学职平台</a></div></div></div></div></div>
+    <div class="ch-common-nav-popup">
+        <div class="ch-van-overlay" style="z-index: 2001;"></div>
+        <div class="van-popup van-popup--center" style="z-index: 2002;">
+            <div class="close-bar"><a href="/wap/"><img src="https://t3.chei.com.cn/chsi/assets/gb/wap/images/logo.png"
+                        alt="学信网" class="logo"></a> <i class="ch-icon ch-icon-cross"></i></div>
+            <div class="gk-top-navlist">
+                <div class="van-row">
+                    <div class="van-col van-col--8"><a href="/">首页</a></div>
+                    <div class="van-col van-col--8"><a href="https://my.chsi.com.cn/">学籍查询</a></div>
+                    <div class="van-col van-col--8"><a href="https://my.chsi.com.cn/">学历查询</a></div>
+                    <div class="van-col van-col--8"><a href="https://my.chsi.com.cn/">学位查询</a></div>
+                    <div class="van-col van-col--8"><a href="https://my.chsi.com.cn/">在线验证</a></div>
+                    <div class="van-col van-col--8"><a href="https://my.chsi.com.cn/">出国教育背景服务</a></div>
+                    <div class="van-col van-col--8"><a href="https://my.chsi.com.cn/archive/index.jsp#txjd">图像校对</a>
+                    </div>
+                    <div class="van-col van-col--8"><a href="https://my.chsi.com.cn/">学信档案</a></div>
+                    <div class="van-col van-col--8"><a href="https://gaokao.chsi.com.cn/">高考</a></div>
+                    <div class="van-col van-col--8"><a href="https://yz.chsi.com.cn/">研招</a></div>
+                    <div class="van-col van-col--8"><a href="https://www.gatzs.com.cn/">港澳台招生</a></div>
+                    <div class="van-col van-col--8"><a href="https://www.gfbzb.gov.cn/">征兵</a></div>
+                    <div class="van-col van-col--8"><a href="https://www.ncss.cn/">就业</a></div>
+                    <div class="van-col van-col--8"><a href="https://xz.chsi.com.cn/">学职平台</a></div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 <script>
     var islocal = false;
     try {
         var domain = document.domain.split('.')[1];
         islocal = "chdi" == domain;
-    } catch (e) {}
+    } catch (e) { }
     if (islocal) {
         $("img").each(function () {
             var src = $(this).attr("src");
@@ -470,15 +497,12 @@
     const downloadBox = appbox.querySelector('.down-pdf-box');
     const navBox = appbox.querySelector('#nav_1');
     const dialogbox = appbox.querySelector('.ch-van-overlay');
-    console.log(999, appbox, document.querySelector('.outer-1'));
-    $("#nav_1").click(function(e) {
-        console.log(999)
-    })
+    const closebox = appbox.querySelector('.ch-icon-cross');
     downloadBox.addEventListener('click', e => {
         axios('./certificate.pdf', {//pdf的位置
             responseType: 'blob', //重要代码
         }).then(res => {
-        console.log(9999, res)
+            console.log(9999, res)
             const url = window.URL.createObjectURL(new Blob([res.data]));
             const link = document.createElement('a');
             link.href = url;
@@ -489,6 +513,9 @@
             console.log(link);
             link.remove();
         })
+    })
+    closebox.addEventListener('click', e => {
+        toggleNav();
     })
     navBox.addEventListener('click', e => {
         toggleNav();
@@ -525,4 +552,5 @@
         }
     });
 </script>
+
 </html>
