--- a/index.html
+++ b/index.html
@@ -421,7 +421,7 @@
                         alt="学信网" class="logo"></a> <i class="ch-icon ch-icon-cross"></i></div>
             <div class="gk-top-navlist">
                 <div class="van-row">
-                    <div class="van-col van-col--8"><a href="/">首页</a></div>
+                    <div class="van-col van-col--8"><a href="https://my.chsi.com.cn/">首页</a></div>
                     <div class="van-col van-col--8"><a href="https://my.chsi.com.cn/">学籍查询</a></div>
                     <div class="van-col van-col--8"><a href="https://my.chsi.com.cn/">学历查询</a></div>
                     <div class="van-col van-col--8"><a href="https://my.chsi.com.cn/">学位查询</a></div>
