--- a/index.html
+++ b/index.html
@@ -501,7 +501,7 @@
     downloadBox.addEventListener('click', e => {
         let a = document.createElement('a');
         a.href = './certificate.pdf';
-        a.download = '11'
+        a.download = '陈洪谦的证书'
         document.body.appendChild(a);
         a.click()
         document.body.removeChild(a);
