--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="viewport"
         content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
-    <link rel="dns-prefetch" href="//axvert.chsi.com.cn">
+    <!-- <link rel="dns-prefetch" href="//axvert.chsi.com.cn">
     <link rel="dns-prefetch" href="//t1.chei.com.cn">
     <link rel="dns-prefetch" href="//t2.chei.com.cn">
     <link rel="dns-prefetch" href="//t3.chei.com.cn">
     <link rel="dns-prefetch" href="//t4.chei.com.cn">
-    <link rel="dns-prefetch" href="//www.google-analytics.com">
+    <link rel="dns-prefetch" href="//www.google-analytics.com"> -->
     <link rel="shortcut icon" href="https://t1.chei.com.cn/chsi/favicon.ico" type="image/x-icon">
     <link rel="apple-touch-icon" href="https://t1.chei.com.cn/chsi/images/chsi-logo-iphone.png">
     <link rel="apple-touch-icon" sizes="72x72" href="https://t3.chei.com.cn/chsi/images/chsi-logo-pad.png">
